--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,21 @@
   text-align: left;
 }
 
+.student-info {
+  margin-left: 1%;
+  margin-bottom: 3%;
+}
+
+.container {
+  background-color: darkgrey;
+}
+
 .student-pic {
   max-width: 100%;
-  height: 120px;
+  height: 150px;
   border: 0.5px solid black;
   border-radius: 50%;
-  margin-right: 20px;
-  margin-left: 20px;
-  margin-top: 50%;
+  margin: 6%;
   float: left;
   display: inline-block;
 }
@@ -18,23 +25,19 @@
   border: 0.3px solid black;
   width: 50%;
   margin-left: 25%;
+  background-color: white;
 }
 
 .student-info {
   display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.student-container {
+  margin: 6rem;
 }
 
-.App-link {
-  color: #09d3ac;
+.container {
+  width: 100%;
+  height: 100%;
+  background-color: grey;
 }
